fixing more alignment bugs

--- a/itis3135/styles/default.css
+++ b/itis3135/styles/default.css
@@ -27,7 +27,8 @@ footer
 
 #intro_wedding_pic
 {
-  text-align: center;
+  margin: auto;
+  display: block;
   width: 189px;
   height: 252px;
 }
